# bobtimus

./: README.md
src/bobtimus_can/: CMakeLists.txt  README.md  package.xml
src/bobtimus_can/src/: can_node.py  can_to_ros_publisher.py  horn_publisher.py  ros_to_can_publisher.py
src/bobtimus_joystick/: CMakeLists.txt  README.md  package.xml
src/bobtimus_joystick/src/: joystick.py
src/bobtimus_launcher/: CMakeLists.txt  package.xml
src/bobtimus_launcher/launch/: testObstacleDetector.launch
src/bobtimus_lidar/launch/: sick_mrs1000.launch
src/bobtimus_obstacle_detector/launch/: nodes.launch  test.launch
src/bobtimus_obstacle_detector/resources/: obstacle_detector.rviz
