<?xml version="1.0"?>
<package format="2">
  <name>bobtimus_can</name>
  <version>0.0.1</version>
	  <description>The bobtimus_can package</description>

  <maintainer email="karim.awad@octanes.de">Karim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ctypes</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>ctypes</build_export_depend>
  <exec_depend>rospy</exec_depend>  
  <exec_depend>ctypes</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
