<?xml version="1.0"?>
<package format="2">
  <name>bobtimus_joystick</name>
  <version>0.1.0</version>
  <description>The bobtimus_joystick package</description>

  <maintainer email="martin@todo.todo">martin</maintainer>
  <maintainer email="karim.awad@octanes.de">Karim Awad</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
    
</package>
